; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_net_tuntests.c_setup_ipsec_test.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_net_tuntests.c_setup_ipsec_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [28 x i8] c"Configuring for ipsec tests\00", align 1
@IPSEC_OPT_ENABLE_NETIF = common dso_local global i32 0, align 4
@g_OPT_ENABLE_NETIF = common dso_local global i32 0, align 4
@IPSEC_OPT_ENABLE_FLOWSWITCH = common dso_local global i32 0, align 4
@g_OPT_ENABLE_FLOWSWITCH = common dso_local global i32 0, align 4
@IPSEC_OPT_ENABLE_CHANNEL = common dso_local global i32 0, align 4
@g_OPT_ENABLE_CHANNEL = common dso_local global i32 0, align 4
@IPSEC_OPT_GET_CHANNEL_UUID = common dso_local global i32 0, align 4
@g_OPT_GET_CHANNEL_UUID = common dso_local global i32 0, align 4
@IPSEC_OPT_IFNAME = common dso_local global i32 0, align 4
@g_OPT_IFNAME = common dso_local global i32 0, align 4
@IPSEC_CONTROL_NAME = common dso_local global i32 0, align 4
@g_CONTROL_NAME = common dso_local global i32 0, align 4
@g_is_ipsec_test = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @setup_ipsec_test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setup_ipsec_test() #0 {
  %1 = call i32 @T_LOG(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  %2 = load i32, i32* @IPSEC_OPT_ENABLE_NETIF, align 4
  store i32 %2, i32* @g_OPT_ENABLE_NETIF, align 4
  %3 = load i32, i32* @IPSEC_OPT_ENABLE_FLOWSWITCH, align 4
  store i32 %3, i32* @g_OPT_ENABLE_FLOWSWITCH, align 4
  %4 = load i32, i32* @IPSEC_OPT_ENABLE_CHANNEL, align 4
  store i32 %4, i32* @g_OPT_ENABLE_CHANNEL, align 4
  %5 = load i32, i32* @IPSEC_OPT_GET_CHANNEL_UUID, align 4
  store i32 %5, i32* @g_OPT_GET_CHANNEL_UUID, align 4
  %6 = load i32, i32* @IPSEC_OPT_IFNAME, align 4
  store i32 %6, i32* @g_OPT_IFNAME, align 4
  %7 = load i32, i32* @IPSEC_CONTROL_NAME, align 4
  store i32 %7, i32* @g_CONTROL_NAME, align 4
  store i32 1, i32* @g_is_ipsec_test, align 4
  ret void
}

declare dso_local i32 @T_LOG(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
